# auto_new

./: Cargo.toml  README.md
src/: lib.rs  test.rs
tests/: test.rs
tests/fails/: enum.rs  enum.stderr  no_arc.rs  no_arc.stderr  private.rs  private.stderr  union.rs  union.stderr
