[package]
name = "new_macro"
license = "Apache-2.0"
description = "basic macro for removing the need to write new(...) on structs"
readme = "README.md"
version = "0.9.0"
edition = "2021"

[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full","extra-traits"] }
quote = "1.0"
trybuild = "1.0.101"