[package]
name = "auto_new"
license = "Apache-2.0"
description = "basic macro for removing the need to write new(...) on structs"
readme = "README.md"
version = "1.0.0"
edition = "2021"
exclude = ["/tests", ".*"]
repository="https://github.com/nevakrien/auto_new.git"

[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = [] }
quote = "1.0"

[dev-dependencies]
trybuild = "1.0.101"